SERVER-105724 Fix CollectionCatalog non-staleness assertion in rename collection op application (#36705)

GitOrigin-RevId: 7417f4db8076f558878fda5b5cba9774b83e4e5e